package proto_ff;

import "yd_fieldoptions.proto";


message E_PathPath
{
	optional int64 m_id = 1[(yd_fieldoptions.field_cname) = "路径ID"];
	optional int64 m_belongtosceneid = 2[(yd_fieldoptions.field_cname) = "所属场景"];
}


message Sheet_PathPath
{
	repeated E_PathPath E_PathPath_List = 1[(yd_fieldoptions.field_arysize)=20];
}
